--- a/homework/Day005_HW.ipynb
+++ b/homework/Day005_HW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -16,6 +16,7 @@
    "source": [
     "# 1. 這個 API 一次會回傳幾筆資料？每一筆資料包含哪些欄位？\n",
     "import requests,json\n",
+    "import pandas as pd\n",
     "url = \" https://www.dcard.tw/_api/forums/pet/posts?popular=true\"\n",
     "fl = requests.get(url)\n",
     "file = json.loads(fl.text)\n",
@@ -168,34 +169,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "熱門文章\n",
-      "平均留言人數 :5.63\n",
-      "平均按讚人數 :44.77\n"
+      "計算熱門的「平均留言人數」與「平均按讚人數」\n",
+      "平均留言人數 5.166666666666667\n",
+      "平均按讚人數 43.46666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "#使用Pandas取出每一筆資料的「標題」、「貼文時間」、「留言人數」、「按讚人數」\n",
+    "#使用Pandas計算熱門的「平均留言人數」與「平均按讚人數」\n",
+    "title,time,comment,like = [], [], [], []\n",
+    "for ls in file:\n",
+    "    title.append(ls[\"title\"])\n",
+    "    time.append(ls[\"createdAt\"])\n",
+    "    comment.append(ls[\"commentCount\"])\n",
+    "    like.append(ls[\"likeCount\"])\n",
+    "data = {\"title\":title,\"time\":time,\"comment\":comment,\"like\":like}\n",
+    "aa = pd.DataFrame(data)\n",
+    "\n",
+    "print(\"計算熱門的「平均留言人數」與「平均按讚人數」\")\n",
+    "print(\"平均留言人數\",aa[\"comment\"].mean())\n",
+    "print(\"平均按讚人數\",aa[\"like\"].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "平均留言人數: 52.03\n",
+      "平均按讚人數 :433.60\n"
      ]
     }
    ],
    "source": [
     "# 3. 計算熱門/非熱門文章的「平均留言人數」與「平均按讚人數」\n",
     "#熱門\n",
-    "com_count = 0\n",
-    "like_count = 0\n",
     "for i in file:\n",
     "    com_count += i[\"commentCount\"]\n",
     "    like_count += i[\"likeCount\"]\n",
     "\n",
     "avgcomment = com_count/len(file)\n",
     "avglike = like_count/len(file)\n",
-    "print(\"熱門文章\")\n",
-    "print(\"平均留言人數 :%.2f\"%(avgcomment))\n",
+    "\n",
+    "print(\"平均留言人數: %.2f\"%(avgcomment))\n",
     "print(\"平均按讚人數 :%.2f\"%(avglike))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
